--- a/src/main/web/app/views/main.html
+++ b/src/main/web/app/views/main.html
@@ -1,10 +1,18 @@
 <h1>You Should remember me!</h1>
 <p class="lead">
-    Provide your social whereabouts and press generate
+    Provide your social whereabouts and press {{personToMatch ? 'compare' : 'generate'}}
 </p>
 
 <div>
+    <div class="well" ng-show="personToMatch">
+        Hi there celebrity. Your time is being wasted by this inferior creature: <b>{{personToMatch.name}}</b>. We apologize.
+    </div>
+
     <form role="form">
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Name" ng-model="linkRequest.name">
+        </div>
         <div class="form-group">
             <label for="twitter">Twitter</label>
 
@@ -21,8 +29,8 @@
             <label for="googleplus">Google+</label>
             <input type="text" class="form-control" id="googleplus" placeholder="Google+ login" ng-model="linkRequest.googleplus">
         </div>
-        <button type="submit" class="btn btn-success" ng-click="generate()">Generate!</button>
-        <span class="help-block">Once you press Generate! we will provide you with a link that you
-        can send to your favorite celebrity</span>
+        <button type="submit" class="btn btn-success" ng-click="generate()">{{personToMatch ? 'Compare' : 'Generate'}}!</button>
+        <span class="help-block">Once you press {{personToMatch ? 'Compare' : 'Generate'}}! we will provide you with
+            {{personToMatch ? 'possible sources you might know ths peasant from' : 'a link that you can send to your favorite celebrity'}}.</span>
     </form>
 </div>
