call user-data-holder once celebrity clicks Compare!

--- a/src/main/web/app/views/main.html
+++ b/src/main/web/app/views/main.html
@@ -26,6 +26,10 @@
             <input type="text" class="form-control" id="facebook" placeholder="Facebook login" ng-model="linkRequest.facebook">
         </div>
         <div class="form-group">
+            <label for="fap">FAP</label>
+            <input type="text" class="form-control" id="fap" placeholder="RSS fap" ng-model="linkRequest.rss">
+        </div>
+        <div class="form-group">
             <label for="googleplus">Google+</label>
             <input type="text" class="form-control" id="googleplus" placeholder="Google+ login" ng-model="linkRequest.googleplus">
         </div>
