show matching results

--- a/src/main/web/app/views/main.html
+++ b/src/main/web/app/views/main.html
@@ -42,11 +42,26 @@
             {{personToMatch ? 'possible sources you might know ths peasant from' : 'a link that you can send to your favorite celebrity'}}.</span>
     </form>
 
-    <div ng-show="results.length > 0">
+    <div ng-show="results">
         <h3>Results:</h3>
-        <ul ng-repeat="result in results track by $index">
-            <li>{{result}}</li>
-        </ul>
+        <table ng-repeat="relationship in results.relationships track by $index" class="table table-striped">
+            <thead>
+                <tr>
+                    <th colspan="2"><h3>{{relationship.correlatorType}}</h3></th>
+                </tr>
+                <tr>
+                    <th>Score</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="relation in relationship.relations track by $id(relation)"
+                    style="font-size: {{10 + relation.score}}px">
+                    <td>{{relation.score}}</td>
+                    <td>{{relation.description}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <script type="text/ng-template" id="modalWithLink.html">
