--- a/src/main/web/app/views/main.html
+++ b/src/main/web/app/views/main.html
@@ -4,43 +4,45 @@
 </p>
 
 <div>
-    <div class="well" ng-show="personToMatch">
-        Hi there celebrity. Your time is being wasted by this inferior creature: <b>{{personToMatch.name}}</b>. We apologize.
-    </div>
-
-    <form role="form">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Name" ng-model="linkRequest.name">
+    <div ng-hide="results">
+        <div class="well" ng-show="personToMatch">
+            Hi there celebrity. Your time is being wasted by this inferior creature: <b>{{personToMatch.name}}</b>. We apologize.
         </div>
-        <div class="form-group">
-            <label for="twitter">Twitter</label>
 
-            <div class="input-group">
-                <div class="input-group-addon">@</div>
-                <input class="form-control" type="text" placeholder="Twitter handle" id="twitter" ng-model="linkRequest.twitter">
+        <form role="form">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Name" ng-model="linkRequest.name">
             </div>
-        </div>
-        <div class="form-group">
-            <label for="facebook">Facebook</label>
-            <input type="text" class="form-control" id="facebook" placeholder="Facebook login" ng-model="linkRequest.facebook">
-        </div>
-        <div class="form-group">
-            <label for="fap">FAP</label>
-            <input type="text" class="form-control" id="fap" placeholder="RSS fap" ng-model="linkRequest.rss">
-        </div>
-        <div class="form-group">
-            <label for="googleplus">Google+</label>
-            <input type="text" class="form-control" id="googleplus" placeholder="Google+ login" ng-model="linkRequest.googleplus">
-        </div>
-        <div class="form-group">
-            <label for="github">github</label>
-            <input type="text" class="form-control" id="github" placeholder="github account" ng-model="linkRequest.github">
-        </div>
-        <button type="submit" class="btn btn-success" ng-click="generate()">{{personToMatch ? 'Compare' : 'Generate'}}!</button>
-        <span class="help-block">Once you press {{personToMatch ? 'Compare' : 'Generate'}}! we will provide you with
-            {{personToMatch ? 'possible sources you might know ths peasant from' : 'a link that you can send to your favorite celebrity'}}.</span>
-    </form>
+            <div class="form-group">
+                <label for="twitter">Twitter</label>
+
+                <div class="input-group">
+                    <div class="input-group-addon">@</div>
+                    <input class="form-control" type="text" placeholder="Twitter handle" id="twitter" ng-model="linkRequest.twitter">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="facebook">Facebook</label>
+                <input type="text" class="form-control" id="facebook" placeholder="Facebook login" ng-model="linkRequest.facebook">
+            </div>
+            <div class="form-group">
+                <label for="fap">FAP</label>
+                <input type="text" class="form-control" id="fap" placeholder="RSS fap" ng-model="linkRequest.rss">
+            </div>
+            <div class="form-group">
+                <label for="googleplus">Google+</label>
+                <input type="text" class="form-control" id="googleplus" placeholder="Google+ login" ng-model="linkRequest.googleplus">
+            </div>
+            <div class="form-group">
+                <label for="github">github</label>
+                <input type="text" class="form-control" id="github" placeholder="github account" ng-model="linkRequest.github">
+            </div>
+            <button type="submit" class="btn btn-success" ng-click="generate()">{{personToMatch ? 'Compare' : 'Generate'}}!</button>
+            <span class="help-block">Once you press {{personToMatch ? 'Compare' : 'Generate'}}! we will provide you with
+                {{personToMatch ? 'possible sources you might know ths peasant from' : 'a link that you can send to your favorite celebrity'}}.</span>
+        </form>
+    </div>
 
     <div ng-show="results">
         <h3>Results:</h3>
